# Progetto_SE2

./: .Rhistory  .gitignore  IR.py  README.md  T2.py  Tidy.R  Tidy_movies.py  Tidying.py  ToDo.txt  app.py  book_count_per_year.csv  books2json.py  books2json2.py  bulk.py  famous_books.csv  hello.py  movies.csv  myindex.py  pyproject.toml  recommender.py  sf_writing_useful_datasets.py  tentativi_app.py  text_mining.py
